<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_principal"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_services"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_clients"
            android:title="@string/menu_clients" />
    </group>

    <item android:title="@string/entre_em_contato">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/menu_contact" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>